css change to prevent last image in grid being too wide

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1650,6 +1650,11 @@ section.photo img {
     display:block;
   }
 
+  section.photo ul.fancyPhotoset > li:last-child a img {
+    /* border:4px solid red; */
+    max-width: 20vw;
+  }
+
   body.newsletter section.photo .main img {
     width:25%;
   }
